# salubrious

./: .gitignore  Makefile  README.md
.github/workflows/: test.yml
client/: package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/api/: client.ts
client/src/components/: Layout.tsx  NavBar.tsx
client/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useApi.ts
client/src/pages/: AllocationPage.tsx  HoldingsPage.tsx  InsightsPage.tsx  LoginPage.tsx  PlanPage.tsx  ReviewPage.tsx  SettingsPage.tsx  SpendingPage.tsx  TodayPage.tsx
client/src/types/: index.ts
docs/: csv-import-format.md
server/: pyproject.toml
server/app/: auth.py  auth_config.py  database.py  fund_metadata.py  main.py  models.py  schemas.py  seed.py
server/app/engines/: allocation.py  bands.py  breakdown.py  monte_carlo.py  rebalance.py  recommendation.py  spending.py
server/app/routers/: allocation.py  auth.py  insights.py  policy.py  portfolio.py  prices.py  profile_data.py  recommendation.py  review.py  settings.py  spending.py
server/tests/: conftest.py  test_allocation.py  test_auth.py  test_bands.py  test_breakdown.py  test_rebalance.py  test_recommendation.py  test_spending.py
specs/: personal_finance_app_spec.md
