[project]
name = "salubrious-server"
version = "0.1.0"
description = "Calm portfolio tracking backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "yfinance>=0.2.40",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "google-auth>=2.0",
    "pyjwt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
